[package]
name = "gostpass-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.7",  features = ["sqlite", "runtime-tokio"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"]}
libgost-rs = { git = "https://github.com/glukozka-dev/libgost-rs.git" }
axum = { version = "0.8.8", features = ["macros"] }
rsa = "0.9.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"